# juridico-cli

./: .gitignore  Plano_Arquitetura_alvo_projeto_juridico-cli.md  README.md  debug.py  diff_hipotecas_onus.py  levantamento_auto.md  main.py  pyproject.toml  requirements.txt  ruff.toml  script.sh  test_deterministic_tools.py  test_genai.py  test_rag_tools.py  teste_debug.py  validate_collector_outputs.py
docs/: PLAN-juridico-execution.md  WALKTHROUGH-juridico-execution.md
mcp-server-cad-obr/: deterministic.py  pyproject.toml  rag_tools.py  server.py
mcp-server-cad_obr/: deterministic.py  pyproject.toml  server.py
pipelines/: cad_obr.py
prompts/: case-law.md  collector-cad-obr.md  collector-cad_obr.md  collector-proc.md  collector.md  compliance.md  firac.md  petition.md  reconciler.md
schemas/: cabecalho_processo.consolidated.schema.json  cabecalho_processo.schema.json  cadeia_obrigacoes.schema.json  contestacao_processo.consolidated.schema.json  contestacao_processo.schema.json  contrato_social.json  decisao_processo.consolidated.schema.json  decisao_processo.schema.json  escritura_hipotecaria.schema.json  escritura_imovel.schema.json  mandato_processo.consolidated.schema.json  mandato_processo.schema.json  peticao_processo.consolidated.schema.json  peticao_processo.schema.json  processo.schema.json  procuracao.consolidated.schema.json  procuracao.schema.json  v1_procuracao.schema.json
scripts/: genai_adapter.py  precedent_finder.py  rag_service.py  setup_schemas.py  transcriber_util.py
templates/: peticao_esqueleto.md  regras_para_peticao_juridica.md  (+1 more)
(+111 files in other folders)
